# epaper-weather

./: README.md  platformio.ini
include/: lv_conf.h
src/: main.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp_hook.c
src/ui/images/: ui_img_day_113_png.c  ui_img_day_116_png.c  ui_img_day_119_png.c  ui_img_day_122_png.c  ui_img_day_143_png.c  ui_img_day_176_png.c  ui_img_day_179_png.c  ui_img_day_182_png.c  ui_img_day_185_png.c  ui_img_day_200_png.c  ui_img_day_227_png.c  ui_img_day_230_png.c  ui_img_day_248_png.c  ui_img_day_260_png.c  ui_img_day_263_png.c  ui_img_day_266_png.c  ui_img_day_281_png.c  ui_img_day_284_png.c  ui_img_day_293_png.c  ui_img_day_296_png.c  ui_img_day_299_png.c  ui_img_day_302_png.c  ui_img_day_305_png.c  ui_img_day_308_png.c  ui_img_day_311_png.c  ui_img_day_314_png.c  ui_img_day_317_png.c  ui_img_day_320_png.c  ui_img_day_323_png.c  ui_img_day_326_png.c  ui_img_day_329_png.c  ui_img_day_332_png.c  ui_img_day_335_png.c  ui_img_day_338_png.c  ui_img_day_350_png.c  ui_img_day_353_png.c  ui_img_day_356_png.c  ui_img_day_359_png.c  ui_img_day_362_png.c  ui_img_day_365_png.c  (+60 more)
src/ui/screens/: ui_Screen1.c
