SET(SOURCES screens/ui_Screen1.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_day_176_png.c
    images/ui_img_humidity_icon_png.c
    images/ui_img_wind_icon_png.c
    images/ui_img_rain_icon_png.c
    images/ui_img_uv_icon_png.c
    images/ui_img_day_368_png.c
    images/ui_img_day_113_png.c
    images/ui_img_day_116_png.c
    images/ui_img_day_119_png.c
    images/ui_img_day_122_png.c
    images/ui_img_day_143_png.c
    images/ui_img_day_179_png.c
    images/ui_img_day_182_png.c
    images/ui_img_day_185_png.c
    images/ui_img_day_200_png.c
    images/ui_img_day_227_png.c
    images/ui_img_day_230_png.c
    images/ui_img_day_248_png.c
    images/ui_img_day_260_png.c
    images/ui_img_day_263_png.c
    images/ui_img_day_266_png.c
    images/ui_img_day_281_png.c
    images/ui_img_day_284_png.c
    images/ui_img_day_293_png.c
    images/ui_img_day_296_png.c
    images/ui_img_day_299_png.c
    images/ui_img_day_302_png.c
    images/ui_img_day_305_png.c
    images/ui_img_day_308_png.c
    images/ui_img_day_311_png.c
    images/ui_img_day_314_png.c
    images/ui_img_day_317_png.c
    images/ui_img_day_320_png.c
    images/ui_img_day_323_png.c
    images/ui_img_day_326_png.c
    images/ui_img_day_329_png.c
    images/ui_img_day_332_png.c
    images/ui_img_day_335_png.c
    images/ui_img_day_338_png.c
    images/ui_img_day_350_png.c
    images/ui_img_day_353_png.c
    images/ui_img_day_356_png.c
    images/ui_img_day_359_png.c
    images/ui_img_day_362_png.c
    images/ui_img_day_365_png.c
    images/ui_img_day_371_png.c
    images/ui_img_day_374_png.c
    images/ui_img_day_377_png.c
    images/ui_img_day_386_png.c
    images/ui_img_day_389_png.c
    images/ui_img_day_392_png.c
    images/ui_img_day_395_png.c
    images/ui_img_night_113_png.c
    images/ui_img_night_116_png.c
    images/ui_img_night_119_png.c
    images/ui_img_night_122_png.c
    images/ui_img_night_143_png.c
    images/ui_img_night_176_png.c
    images/ui_img_night_179_png.c
    images/ui_img_night_182_png.c
    images/ui_img_night_185_png.c
    images/ui_img_night_200_png.c
    images/ui_img_night_227_png.c
    images/ui_img_night_230_png.c
    images/ui_img_night_248_png.c
    images/ui_img_night_260_png.c
    images/ui_img_night_263_png.c
    images/ui_img_night_266_png.c
    images/ui_img_night_281_png.c
    images/ui_img_night_284_png.c
    images/ui_img_night_293_png.c
    images/ui_img_night_296_png.c
    images/ui_img_night_299_png.c
    images/ui_img_night_302_png.c
    images/ui_img_night_305_png.c
    images/ui_img_night_308_png.c
    images/ui_img_night_311_png.c
    images/ui_img_night_314_png.c
    images/ui_img_night_317_png.c
    images/ui_img_night_320_png.c
    images/ui_img_night_323_png.c
    images/ui_img_night_326_png.c
    images/ui_img_night_329_png.c
    images/ui_img_night_332_png.c
    images/ui_img_night_335_png.c
    images/ui_img_night_338_png.c
    images/ui_img_night_350_png.c
    images/ui_img_night_353_png.c
    images/ui_img_night_356_png.c
    images/ui_img_night_359_png.c
    images/ui_img_night_362_png.c
    images/ui_img_night_365_png.c
    images/ui_img_night_368_png.c
    images/ui_img_night_371_png.c
    images/ui_img_night_374_png.c
    images/ui_img_night_377_png.c
    images/ui_img_night_386_png.c
    images/ui_img_night_389_png.c
    images/ui_img_night_392_png.c
    images/ui_img_night_395_png.c)

add_library(ui ${SOURCES})
